...
    func successfulSignUp() {
        let alert = UIAlertController(title: "Success", message: "The sign up operation was successful", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
        
        DispatchQueue.main.async {
            // add accesibility identifier for connecting UITests
            // See XCTAssertTrue(app.alerts["successAlertDialog"] in SignUPFlowUITests
            alert.view.accessibilityIdentifier = "successAlertDialog"
            self.present(alert, animated: true, completion: nil)
        }
    }
    
    func errorHandler(error: SignupError) {
        let alert = UIAlertController(title: "Error",
                                      message: "\(error.errorDescription)", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
        
        DispatchQueue.main.async {
            // add accesibility identifier for connecting UITests
            // See XCTAssertTrue(app.alerts["errorAlertDialog"] in SignUPFlowUITests
            alert.view.accessibilityIdentifier = "errorAlertDialog"
            self.present(alert, animated: true, completion: nil)
        }
    }
}

